[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/StageManager.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/borderBlack.png" type="Texture" id=2]

[sub_resource type="Animation" id=2]
resource_name = "FADE_TO_NEXT_STAGE"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="StageManager" type="Node2D"]
script = ExtResource( 1 )

[node name="StageTimer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 626, 359 )
scale = Vector2( 2.43784, 1.89187 )
z_index = 100
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FADE_TO_NEXT_STAGE = SubResource( 2 )
anims/RESET = SubResource( 1 )

[connection signal="timeout" from="StageTimer" to="." method="_on_StageTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
